--- a/app/notification.html
+++ b/app/notification.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Htmlcoin Qnekt Notification</title>
+    <title>Htmlcoin Altmasq Notification</title>
     <style>
       #app-content {
         display: flex;
